Multi GPU working. 89 Secs on 48 views with 22 batch

--- a/interactive_controller.ipynb
+++ b/interactive_controller.ipynb
@@ -36,7 +36,8 @@
     "\n",
     "\n",
     "from models.resnet import *\n",
-    "from augment import augmentImages\n",
+    "#import augment\n",
+    "from augment import augment_on_GPU\n",
     "\n",
     "import util\n",
     "from logger import Logger\n",
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
     "parser.add_argument('--data', metavar='DIR', default='/localscratch/Users/amotahari/MV_CNN_views', help='path to dataset')\n",
     "parser.add_argument('--resnet', default=18, choices=[18, 34, 50, 101, 152], type=int, metavar='N', help='resnet depth (default: resnet18)')\n",
     "parser.add_argument('--epochs', default=100, type=int, metavar='N', help='number of total epochs to run (default: 100)')\n",
-    "parser.add_argument('-b', '--batch-size', default=12, type=int,\n",
+    "parser.add_argument('-b', '--batch-size', default=22, type=int,\n",
     "                    metavar='N', help='mini-batch size (default: 4)')\n",
     "parser.add_argument('--lr', '--learning-rate', default=0.01, type=float,\n",
     "                    metavar='LR', help='initial learning rate (default: 0.01)')\n",
@@ -69,8 +70,11 @@
     "                    help='path to latest checkpoint (default: none)')\n",
     "parser.add_argument('-o', '--output', default='/Shared/CTmechanics_COPDGene/Amin/Airway_PyTorch', type=str, metavar='PATH',\n",
     "                    help='path to Output folder for logs and checkpoints (default: none)')\n",
-    "parser.add_argument('-w', '--workers', default=0, type=int,\n",
-    "                    metavar='N', help='Number of workers in input pipr (default: 4)')\n",
+    "parser.add_argument('-w', '--workers', default=1, type=int,\n",
+    "                    metavar='N', help='Number of workers in input pipe (default: 4)')\n",
+    "parser.add_argument('-wd', '--weight_decay', default=0.0, type=float,\n",
+    "                    metavar='W', help='Weight decay factor (default: 0.0)')\n",
+    "\n",
     "parser.add_argument('-f', '--fun', default='', type=str, metavar='PATH',\n",
     "                    help='path to Output folder for logs and checkpoints (default: none)')\n",
     "#parser.add_argument('--pretrained', dest='pretrained', action='store_true', help='use pre-trained model')\n",
@@ -99,7 +103,7 @@
    ],
    "source": [
     "transform = transforms.Compose([\n",
-    "    transforms.CenterCrop(500),\n",
+    "    #transforms.CenterCrop(500),\n",
     "    #transforms.RandomAffine(30, translate=(.2,.2), scale=None, shear=None, resample=BILINEAR, fillcolor=0), # Augmentation\n",
     "    transforms.Resize(224),\n",
     "    transforms.ToTensor(),\n",
@@ -132,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -156,48 +160,17 @@
       "\n",
       "-----------------------------------\n",
       "Epoch: [1/100]\n",
-      "\tIter [10/121] Loss: 1.6790\n",
-      "\tIter [20/121] Loss: 0.7865\n",
-      "\tIter [30/121] Loss: 0.6794\n",
-      "\tIter [40/121] Loss: 0.5776\n",
-      "\tIter [50/121] Loss: 1.0442\n",
-      "\tIter [60/121] Loss: 0.6347\n",
-      "\tIter [70/121] Loss: 0.7601\n",
-      "\tIter [80/121] Loss: 0.5016\n",
-      "\tIter [90/121] Loss: 0.6640\n",
-      "\tIter [100/121] Loss: 1.0641\n",
-      "\tIter [110/121] Loss: 0.7914\n",
-      "\tIter [120/121] Loss: 0.7423\n",
-      "Time taken: 189.30 sec.\n",
-      "\n",
-      "Evaluation:\n",
-      "\tVal Acc: 36.00 - Loss: 0.7846\n",
-      "\tCurrent best val acc: 0.00\n",
-      "\tSaving checkpoint - Acc: 36.00\n",
-      "\n",
-      "-----------------------------------\n",
-      "Epoch: [2/100]\n",
-      "\tIter [10/121] Loss: 0.4938\n",
-      "\tIter [20/121] Loss: 0.6850\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-88b245442e71>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    135\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m     \u001b[0mresnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 137\u001b[0;31m     \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    138\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Time taken: %.2f sec.'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstart\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    139\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-11-88b245442e71>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     79\u001b[0m         \u001b[0;31m# compute gradient and do SGD step\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/apps/pytorch/0.4.0_cuda-9.0.176.1_python-3.6.4/lib/python3.6/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m     91\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m         \"\"\"\n\u001b[0;32m---> 93\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/apps/pytorch/0.4.0_cuda-9.0.176.1_python-3.6.4/lib/python3.6/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     87\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     88\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 89\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\tIter [10/66] Loss: 0.7040\n",
+      "\tIter [20/66] Loss: 0.6937\n",
+      "\tIter [30/66] Loss: 0.6822\n",
+      "\tIter [40/66] Loss: 0.6836\n",
+      "\tIter [50/66] Loss: 0.6211\n",
+      "\tIter [60/66] Loss: 0.6833\n"
      ]
     }
    ],
    "source": [
-    "torch.cuda.empty_cache()\n",
+    "#torch.cuda.empty_cache()\n",
     "\n",
     "args.output = os.path.join(args.output, str(uuid.uuid4().hex))\n",
     "if not os.path.exists(args.output):\n",
@@ -224,7 +197,7 @@
     "resnet.to(device)\n",
     "device_ids = range(torch.cuda.device_count())\n",
     "print(\"CUDA devices available: \",device_ids)\n",
-    "resnet = nn.DataParallel(resnet, device_ids=[0,1,2])\n",
+    "resnet = nn.DataParallel(resnet, device_ids=device_ids)\n",
     "cudnn.benchmark = True\n",
     "\n",
     "print('Running on ' + str(device))\n",
@@ -235,7 +208,7 @@
     "lr = args.lr\n",
     "n_epochs = args.epochs\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam(resnet.parameters(), lr=lr)\n",
+    "optimizer = torch.optim.Adam(resnet.parameters(), lr=lr, weight_decay=args.weight_decay)\n",
     "\n",
     "best_acc = 0.0\n",
     "best_loss = 0.0\n",
@@ -261,7 +234,9 @@
     "    for i, (inputs, targets) in enumerate(train_loader):\n",
     "        # Convert from list of 3D to 4D\n",
     "        #inputs = np.stack(inputs, axis=1)\n",
-    "        inputs = np.stack(inputs, axis=0)\n",
+    "        #inputs = np.stack(inputs, axis=0)\n",
+    "        inputs = augment_on_GPU(inputs)\n",
+    "\n",
     "        #print(\"shape of Train input= \", inputs.shape)        \n",
     "        #inputs = augment_on_GPU(inputs)\n",
     "        inputs = torch.from_numpy(inputs)\n",
@@ -299,7 +274,9 @@
     "    for i, (inputs, targets) in enumerate(data_loader):\n",
     "        with torch.no_grad():\n",
     "            # Convert from list of 3D to 4D\n",
-    "            inputs = np.stack(inputs, axis=0)\n",
+    "            #inputs = np.stack(inputs, axis=0)\n",
+    "            inputs = augment_on_GPU(inputs)\n",
+    "            \n",
     "            #print(\"shape of Val input= \", inputs.shape)\n",
     "            #inputs = augment_on_GPU(inputs)\n",
     "            inputs = torch.from_numpy(inputs)\n",
@@ -335,66 +312,115 @@
     "    resnet.train()\n",
     "    train()\n",
     "    print('Time taken: %.2f sec.' % (time.time() - start))\n",
+    "    if (epoch + 1) % 5 == 0: # Eval every 5 epoch\n",
+    "        resnet.eval()\n",
+    "        avg_test_acc, avg_loss = eval(val_loader)\n",
     "\n",
-    "    resnet.eval()\n",
-    "    avg_test_acc, avg_loss = eval(val_loader)\n",
+    "        print('\\nEvaluation:')\n",
+    "        print('\\tVal Acc: %.2f - Loss: %.4f' % (avg_test_acc.item(), avg_loss.item()))\n",
+    "        print('\\tCurrent best val acc: %.2f' % best_acc)\n",
     "\n",
-    "    print('\\nEvaluation:')\n",
-    "    print('\\tVal Acc: %.2f - Loss: %.4f' % (avg_test_acc.item(), avg_loss.item()))\n",
-    "    print('\\tCurrent best val acc: %.2f' % best_acc)\n",
+    "        # Log epoch to tensorboard\n",
+    "        # See log using: tensorboard --logdir='logs' --port=6006\n",
+    "        util.logEpoch(logger, resnet, epoch + 1, avg_loss, avg_test_acc)\n",
     "\n",
-    "    # Log epoch to tensorboard\n",
-    "    # See log using: tensorboard --logdir='logs' --port=6006\n",
-    "    util.logEpoch(logger, resnet, epoch + 1, avg_loss, avg_test_acc)\n",
-    "\n",
-    "    # Save model\n",
-    "    if avg_test_acc > best_acc:\n",
-    "        print('\\tSaving checkpoint - Acc: %.2f' % avg_test_acc)\n",
-    "        best_acc = avg_test_acc\n",
-    "        best_loss = avg_loss\n",
-    "        util.save_checkpoint({\n",
-    "            'epoch': epoch + 1,\n",
-    "            'state_dict': resnet.state_dict(),\n",
-    "            'acc': avg_test_acc,\n",
-    "            'best_acc': best_acc,\n",
-    "            'optimizer': optimizer.state_dict(),\n",
-    "            },\n",
-    "            checkpoint = args.output\n",
-    "        )\n",
+    "        # Save model\n",
+    "        if avg_test_acc > best_acc:\n",
+    "            print('\\tSaving checkpoint - Acc: %.2f' % avg_test_acc)\n",
+    "            best_acc = avg_test_acc\n",
+    "            best_loss = avg_loss\n",
+    "            util.save_checkpoint({\n",
+    "                'epoch': epoch + 1,\n",
+    "                'state_dict': resnet.state_dict(),\n",
+    "                'acc': avg_test_acc,\n",
+    "                'best_acc': best_acc,\n",
+    "                'optimizer': optimizer.state_dict(),\n",
+    "                },\n",
+    "                checkpoint = args.output\n",
+    "            )\n",
     "\n",
     "    # Decaying Learning Rate\n",
     "    if (epoch + 1) % args.lr_decay_freq == 0:\n",
     "        lr *= args.lr_decay\n",
-    "        optimizer = torch.optim.Adam(resnet.parameters(), lr=lr)\n",
+    "        optimizer = torch.optim.Adam(resnet.parameters(), lr=lr, weight_decay=args.weight_decay)\n",
     "        print('Learning rate:', lr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input tensor shape:  torch.Size([12, 48, 3, 224, 224])\n",
-      "Reading batch 120 of 121 \n",
-      "Time to read one epoch:  74.59 seconds.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Check input pipeline throughput\n",
     "start = time.time()\n",
     "for i, (inputs, targets) in enumerate(train_loader):\n",
+    "    inputs = augment_on_GPU(inputs)\n",
     "    if i==0:\n",
     "        print(\"Input tensor shape: \",inputs.shape)\n",
+    "    \n",
     "    sys.stdout.write('Reading batch {} of {} \\r'.format(i+1,len(train_loader)))\n",
     "    sys.stdout.flush()\n",
     "#    if i==10:\n",
     "#        break\n",
     "print('\\nTime to read one epoch:  %.2f seconds.' % (time.time() - start))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.python.client import device_lib\n",
+    "\n",
+    "print((device_lib.list_local_devices()[1].name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(inputs[0:2,:].shape)\n",
+    "\n",
+    "A = augment_on_GPU(inputs)\n",
+    "A = torch.from_numpy(A)\n",
+    "print(A.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "print(inputs[0,0,:].shape)\n",
+    "\n",
+    "C = A-inputs\n",
+    "B = C[0,5,:].transpose(0, 2)\n",
+    "B = B.transpose(0,1)\n",
+    "plt.imshow(B)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sess.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.cuda.empty_cache()\n"
    ]
   },
   {
