--- a/interactive_controller.ipynb
+++ b/interactive_controller.ipynb
@@ -25,14 +25,12 @@
     "import os\n",
     "import sys\n",
     "from importlib import reload\n",
-    "\n",
     "from models.resnet import *\n",
     "import augment\n",
-    "\n",
-    "\n",
     "import util\n",
     "from logger import Logger\n",
-    "from custom_dataset import MultiViewDataSet"
+    "from custom_dataset import MultiViewDataSet\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n"
    ]
   },
   {
@@ -46,11 +44,11 @@
     "parser.add_argument('-j', '--job_id', metavar='ID', default='', help='SGE job ID')\n",
     "parser.add_argument('--resnet', default=18, choices=[18, 34, 50, 101, 152], type=int, metavar='N', help='resnet depth (default: resnet18)')\n",
     "parser.add_argument('--epochs', default=10000, type=int, metavar='N', help='number of total epochs to run (default: 100)')\n",
-    "parser.add_argument('-b', '--batch-size', default=22, type=int, metavar='N', help='mini-batch size (default: 4)')\n",
+    "parser.add_argument('-b', '--batch-size', default=12, type=int, metavar='N', help='mini-batch size (default: 4)')\n",
     "parser.add_argument('--lr', '--learning-rate', default=0.00001, type=float, metavar='LR', help='initial learning rate (default: 0.01)')\n",
     "parser.add_argument('--momentum', default=0.9, type=float, metavar='M', help='momentum (default: 0.9)')\n",
     "parser.add_argument('--lr-decay-freq', default=200, type=float, metavar='W', help='learning rate decay (default: 30)')\n",
-    "parser.add_argument('--lr-decay', default=0.5, type=float, metavar='W', help='learning rate decay (default: 0.1)')\n",
+    "parser.add_argument('--lr-decay', default=1.0, type=float, metavar='W', help='learning rate decay (default: 0.1)')\n",
     "parser.add_argument('--print-freq', '-p', default=10, type=int, metavar='N', help='print frequency (default: 10)')\n",
     "parser.add_argument('-r', '--resume', default='/Shared/CTmechanics_COPDGene/Amin/Airway_PyTorch/607310/checkpoint.pth.tar', type=str, metavar='PATH',\n",
     "                    help='path to latest checkpoint (default: none)')\n",
@@ -58,7 +56,8 @@
     "                    help='path to Output folder for logs and checkpoints (default: none)')\n",
     "parser.add_argument('-w', '--workers', default=1, type=int, metavar='N', help='Number of workers in input pipe (default: 4)')\n",
     "parser.add_argument('-wd', '--weight_decay', default=0.0, type=float, metavar='W', help='Weight decay factor (default: 0.1)')\n",
-    "parser.add_argument('--mode', default='test', type=str, metavar='M', help='Operating mode (default: train)')\n",
+    "parser.add_argument('--l1weight', default=0.0, type=float, metavar='W', help='L1 Regularization Weight (default: 0.0)')\n",
+    "parser.add_argument('--mode', default='train', type=str, metavar='M', help='Operating mode (default: train)')\n",
     "parser.add_argument('--view_step', default=4, type=int, metavar='N', help='Steps in selecting views (default: 1)')\n",
     "\n",
     "\n",
@@ -67,7 +66,14 @@
     "                    help='path to Output folder for logs and checkpoints (default: none)')\n",
     "#parser.add_argument('--pretrained', dest='pretrained', action='store_true', help='use pre-trained model')\n",
     "\n",
-    "args = parser.parse_args()\n"
+    "args = parser.parse_args()\n",
+    "\n",
+    "'''\n",
+    "args.mode = 'train'\n",
+    "args.resume = ''\n",
+    "args.l1weight = 10.0\n",
+    "'''\n",
+    "print(args)"
    ]
   },
   {
@@ -169,6 +175,10 @@
     "n_epochs = args.epochs\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(resnet.parameters(), lr=lr, weight_decay=args.weight_decay)\n",
+    "_,model = next(resnet.named_children())\n",
+    "for name,fc_layer in model.named_children():\n",
+    "    if name in ['fc']:\n",
+    "        break\n",
     "\n",
     "best_acc = 0.0\n",
     "best_loss = 0.0\n",
@@ -190,7 +200,6 @@
     "\n",
     "def train():\n",
     "    train_size = len(train_loader)\n",
-    "\n",
     "    for i, (inputs, targets) in enumerate(train_loader):\n",
     "        # Convert from list of 3D to 4D\n",
     "        #inputs = np.stack(inputs, axis=1)\n",
@@ -207,16 +216,18 @@
     "        # compute output\n",
     "        outputs = resnet(inputs)\n",
     "        #print(outputs.get_device(), targets.get_device())\n",
-    "\n",
+    "        regularization_loss = args.l1weight*torch.mean(torch.abs(fc_layer.weight))\n",
+    "                \n",
     "        loss = criterion(outputs, targets)\n",
-    "\n",
+    "        loss += regularization_loss\n",
     "        # compute gradient and do SGD step\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
     "        if (i + 1) % args.print_freq == 0:\n",
-    "            print(\"\\tIter [%d/%d] Loss: %.4f\" % (i + 1, train_size, loss.item()))\n",
+    "            #print(regularization_loss)\n",
+    "            print(\"\\tIter [%d/%d] Loss: %.4f, Reg: %.6f\" % (i + 1, train_size, loss.item(), regularization_loss.item()))\n",
     "\n",
     "\n",
     "# Validation and Testing\n",
@@ -299,7 +310,15 @@
     "            \n",
     "            #print(test_target)\n",
     "            #print(test_output)\n",
+    "            \n",
+    "            _,model = next(resnet.named_children())\n",
+    "            for name,module in model.named_children():\n",
+    "                if name in ['fc']:\n",
+    "                    print(module.weight)\n",
+    "                    regularization_loss = torch.mean(torch.abs(module))\n",
+    "            print(regularization_loss)\n",
     "\n",
+    "                #regularization_loss += torch.sum(torch.abs(param))  \n",
     "            for i in range(args.batch_size):\n",
     "                if test_target[i] > 2:\n",
     "                    B = A[i,4,:].transpose(0, 2)\n",
@@ -391,7 +410,7 @@
     "#Check input pipeline throughput\n",
     "start = time.time()\n",
     "for i, (inputs, targets) in enumerate(train_loader):\n",
-    "    #inputs = augment.augment_on_GPU(inputs)\n",
+    "    #inputs = augmentor.augment_on_GPU(inputs)\n",
     "    if i==0:\n",
     "        print(\"Input tensor shape: \",inputs.shape)\n",
     "    \n",
@@ -408,7 +427,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(augmentor.sess.run)"
+    "_,model = next(resnet.named_children())\n",
+    "for name,module in model.named_children():\n",
+    "    if name in ['fc']:\n",
+    "        print(module.weight)"
    ]
   },
   {
@@ -473,7 +495,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!nvidia-smi"
+   ]
   },
   {
    "cell_type": "code",
