--- a/interactive_controller.ipynb
+++ b/interactive_controller.ipynb
@@ -30,7 +30,8 @@
     "import util\n",
     "from logger import Logger\n",
     "from custom_dataset import MultiViewDataSet\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n"
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
+    "!~/copydata2local.sh"
    ]
   },
   {
@@ -44,7 +45,7 @@
     "parser.add_argument('-j', '--job_id', metavar='ID', default='', help='SGE job ID')\n",
     "parser.add_argument('--resnet', default=18, choices=[18, 34, 50, 101, 152], type=int, metavar='N', help='resnet depth (default: resnet18)')\n",
     "parser.add_argument('--epochs', default=10000, type=int, metavar='N', help='number of total epochs to run (default: 100)')\n",
-    "parser.add_argument('-b', '--batch-size', default=12, type=int, metavar='N', help='mini-batch size (default: 4)')\n",
+    "parser.add_argument('-b', '--batch-size', default=24, type=int, metavar='N', help='mini-batch size (default: 4)')\n",
     "parser.add_argument('--lr', '--learning-rate', default=0.00001, type=float, metavar='LR', help='initial learning rate (default: 0.01)')\n",
     "parser.add_argument('--momentum', default=0.9, type=float, metavar='M', help='momentum (default: 0.9)')\n",
     "parser.add_argument('--lr-decay-freq', default=200, type=float, metavar='W', help='learning rate decay (default: 30)')\n",
@@ -54,11 +55,11 @@
     "                    help='path to latest checkpoint (default: none)')\n",
     "parser.add_argument('-o', '--output', default='/Shared/CTmechanics_COPDGene/Amin/Airway_PyTorch', type=str, metavar='PATH',\n",
     "                    help='path to Output folder for logs and checkpoints (default: none)')\n",
-    "parser.add_argument('-w', '--workers', default=1, type=int, metavar='N', help='Number of workers in input pipe (default: 4)')\n",
+    "parser.add_argument('-w', '--workers', default=0, type=int, metavar='N', help='Number of workers in input pipe (default: 4)')\n",
     "parser.add_argument('-wd', '--weight_decay', default=0.0, type=float, metavar='W', help='Weight decay factor (default: 0.1)')\n",
     "parser.add_argument('--l1weight', default=0.0, type=float, metavar='W', help='L1 Regularization Weight (default: 0.0)')\n",
     "parser.add_argument('--mode', default='train', type=str, metavar='M', help='Operating mode (default: train)')\n",
-    "parser.add_argument('--view_step', default=4, type=int, metavar='N', help='Steps in selecting views (default: 1)')\n",
+    "parser.add_argument('--view_step', default=1, type=int, metavar='N', help='Steps in selecting views (default: 1)')\n",
     "\n",
     "\n",
     "\n",
@@ -310,15 +311,6 @@
     "            \n",
     "            #print(test_target)\n",
     "            #print(test_output)\n",
-    "            \n",
-    "            _,model = next(resnet.named_children())\n",
-    "            for name,module in model.named_children():\n",
-    "                if name in ['fc']:\n",
-    "                    print(module.weight)\n",
-    "                    regularization_loss = torch.mean(torch.abs(module))\n",
-    "            print(regularization_loss)\n",
-    "\n",
-    "                #regularization_loss += torch.sum(torch.abs(param))  \n",
     "            for i in range(args.batch_size):\n",
     "                if test_target[i] > 2:\n",
     "                    B = A[i,4,:].transpose(0, 2)\n",
