--- a/interactive_controller.ipynb
+++ b/interactive_controller.ipynb
@@ -31,7 +31,11 @@
     "from logger import Logger\n",
     "from custom_dataset import MultiViewDataSet\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
-    "!~/copydata2local.sh"
+    "try:\n",
+    "    !~/copydata2local.sh MV_CNN_Y_multi\n",
+    "except:\n",
+    "    pass\n",
+    "        "
    ]
   },
   {
@@ -41,7 +45,7 @@
    "outputs": [],
    "source": [
     "parser = argparse.ArgumentParser(description='MVCNN-PyTorch')\n",
-    "parser.add_argument('--data', metavar='DIR', default='/localscratch/Users/amotahari/MV_CNN_views', help='path to dataset')\n",
+    "parser.add_argument('--data', metavar='DIR', default='/localscratch/Users/amotahari/MV_CNN_Y_multi', help='path to dataset')\n",
     "parser.add_argument('-j', '--job_id', metavar='ID', default='', help='SGE job ID')\n",
     "parser.add_argument('--resnet', default=18, choices=[18, 34, 50, 101, 152], type=int, metavar='N', help='resnet depth (default: resnet18)')\n",
     "parser.add_argument('--epochs', default=10000, type=int, metavar='N', help='number of total epochs to run (default: 100)')\n",
@@ -359,7 +363,7 @@
     "        resnet.train()\n",
     "        train()\n",
     "        print('Time taken: %.2f sec.' % (time.time() - start))\n",
-    "        if (epoch + 1) % 5 == 0: # Eval every 5 epoch\n",
+    "        if (epoch + 1) % 1 == 0: # Eval every 5 epoch\n",
     "            resnet.eval()\n",
     "            avg_test_acc, avg_loss = eval(val_loader)\n",
     "\n",
